cmake_minimum_required(VERSION 3.13)
project(AisdClient)

add_executable(AisdSearch Search.cpp)
add_executable(AisdSort Sort.cpp)
add_executable(AisdFlags Segregate.cpp DoubleLinkedList.cpp)
add_executable(QuickSort QuickSort.cpp)
add_executable(SearchPattern SearchPattern.cpp)
add_executable(Stack Stack.cpp)
add_executable(Fifo Fifo.cpp)
add_executable(DoubleLinkedList DoubleLinkedList.cpp)

target_include_directories(AisdSearch PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})
target_include_directories(AisdSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})
target_include_directories(AisdFlags PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})
target_include_directories(QuickSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})
target_include_directories(SearchPattern PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})
target_include_directories(Stack PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})
target_include_directories(Fifo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})
target_include_directories(DoubleLinkedList PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR})

target_link_libraries(AisdSearch PUBLIC aisdlib)
target_link_libraries(AisdSort PUBLIC aisdlib)
target_link_libraries(AisdFlags PUBLIC aisdlib)
target_link_libraries(QuickSort PUBLIC aisdlib)
target_link_libraries(SearchPattern PUBLIC aisdlib)
target_link_libraries(Stack PUBLIC aisdlib)
target_link_libraries(Fifo PUBLIC aisdlib)
target_link_libraries(DoubleLinkedList PUBLIC aisdlib)